<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal"
    tools:ignore="HardcodedText">

    <TextView
        android:id="@+id/legendText1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/sun"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/legendText2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/mon"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/legendText3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/tues"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/legendText4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/wedn"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/legendText5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/thurs"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/legendText6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/fri"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/legendText7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/sat"
        android:textColor="@color/black"
        android:textSize="14sp" />

</LinearLayout>
