<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.makeus.milliewillie.ui.MakePlanViewModel" />

        <variable
            name="vi"
            type="com.makeus.milliewillie.ui.MakePlanActivity" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:background="@drawable/ic_clear"
                android:onClick="@{()->vi.finish()}" />

            <TextView
                style="@style/spoqa_medium_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/manage_plan"
                android:textColor="@color/black_all" />

            <TextView
                style="@style/spoqa_regular_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:padding="10dp"
                android:onClick="@{()->vi.finish()}"
                android:text="@string/finish"
                android:textColor="@color/black_all" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:gravity="center_vertical"
            android:background="@color/e_white"
            android:orientation="vertical">

            <TextView
                style="@style/spoqa_regular_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="26dp"
                android:text="@string/introduce_plan_page1" />

            <TextView
                style="@style/spoqa_regular_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="26dp"
                android:text="@string/introduce_plan_page2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->vi.onClickColor()}"
                android:orientation="vertical"
                android:paddingVertical="23dp"
                android:paddingStart="26dp"
                android:paddingEnd="16dp">

                <ImageView
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:background="@drawable/mini_oval_aquablue"
                    android:foreground="@color/trans" />
            </LinearLayout>

            <EditText
                style="@style/spoqa_medium_14"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="24dp"
                android:background="@drawable/bg_left_line_aqua"
                android:gravity="center_vertical"
                android:hint="@string/plan_title"
                android:paddingStart="10dp"
                android:singleLine="true" />
        </LinearLayout>

        <View
            style="@style/MatchWrap_24"
            android:layout_height="1dp"
            android:layout_centerInParent="true"
            android:background="@color/light_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/spoqa_regular_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/devide"
                android:textSize="14sp"
                android:textColor="@color/black_all" />


            <TextView
                android:id="@+id/btn_tp"
                style="@style/spoqa_medium_14"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:onClick="@{()->vi.onClickPlanType()}"
                android:layout_marginStart="40dp"
                android:textColor="@color/black_all"
                android:text="@{vm.livePlanType}"
                tools:text="일정"/>


            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="16dp"
                android:src="@drawable/ic_left" />
        </LinearLayout>

        <View
            style="@style/MatchWrap_24"
            android:layout_height="1dp"
            android:layout_centerInParent="true"
            android:background="@color/light_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/spoqa_regular_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/plan_date"
                android:textSize="14sp"
                android:textColor="@color/black_all" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                style="@style/spoqa_medium_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:onClick="@{()->vi.onClickCalendar()}"
                android:text="@string/pick_date" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="16dp"
                android:src="@drawable/ic_left" />
        </LinearLayout>

        <View
            style="@style/MatchWrap_24"
            android:layout_height="1dp"
            android:layout_centerInParent="true"
            android:background="@color/light_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="8">

            <TextView
                style="@style/spoqa_regular_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="8dp"
                android:text="@string/repeat"
                android:textSize="14sp"
                android:textColor="@color/black_all" />

            <ToggleButton
                android:id="@+id/btn_no_notice"
                style="@style/spoqa_medium_14"
                android:layout_width="35dp"
                android:layout_height="29dp"
                android:gravity="center"
                android:layout_weight="1"
                android:background="@color/trans"
                android:textColor="@color/ic_date_selector"
                android:textOff="@string/repeat_no"
                android:textOn="@string/repeat_no"
                android:onClick="@{(view)->vi.onClickDate(view)}"/>

            <ToggleButton
                android:id="@+id/btn_mon"
                style="@style/spoqa_medium_14"
                android:layout_width="35dp"
                android:layout_height="29dp"
                android:background="@color/trans"
                android:layout_weight="1"
                android:gravity="center"
                android:textOff="@string/mon"
                android:textColor="@color/ic_date_selector"
                android:textOn="@string/mon"
                android:onClick="@{(view)->vi.onClickDate(view)}"/>

            <ToggleButton
                android:id="@+id/btn_tue"
                style="@style/spoqa_medium_14"
                android:layout_width="35dp"
                android:layout_height="29dp"
                android:background="@color/trans"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/ic_date_selector"
                android:textOff="@string/tues"
                android:textOn="@string/tues"
                android:onClick="@{(view)->vi.onClickDate(view)}"/>

            <ToggleButton
                android:id="@+id/btn_wed"
                style="@style/spoqa_medium_14"
                android:layout_width="35dp"
                android:layout_height="29dp"
                android:background="@color/trans"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/ic_date_selector"
                android:textOff="@string/wedn"
                android:textOn="@string/wedn"
                android:onClick="@{(view)->vi.onClickDate(view)}"/>

            <ToggleButton
                android:id="@+id/btn_thur"
                style="@style/spoqa_medium_14"
                android:layout_width="35dp"
                android:layout_height="29dp"
                android:background="@color/trans"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@color/ic_date_selector"
                android:textOff="@string/thurs"
                android:textOn="@string/thurs"
                android:onClick="@{(view)->vi.onClickDate(view)}"/>

            <ToggleButton
                android:id="@+id/btn_fri"
                style="@style/spoqa_medium_14"
                android:layout_width="35dp"
                android:layout_height="29dp"
                android:background="@color/trans"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@color/ic_date_selector"
                android:textOff="@string/fri"
                android:textOn="@string/fri"
                android:onClick="@{(view)->vi.onClickDate(view)}"/>

            <ToggleButton
                android:id="@+id/btn_sat"
                style="@style/spoqa_medium_14"
                android:layout_width="35dp"
                android:layout_height="29dp"
                android:background="@color/trans"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@color/ic_date_selector"
                android:textOff="@string/sat"
                android:textOn="@string/sat"
                android:onClick="@{(view)->vi.onClickDate(view)}"/>

            <ToggleButton
                android:id="@+id/btn_sun"
                style="@style/spoqa_medium_14"
                android:layout_width="35dp"
                android:layout_height="29dp"
                android:background="@color/trans"
                android:layout_marginEnd="39dp"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@color/ic_date_selector"
                android:textOff="@string/sun"
                android:textOn="@string/sun"
                android:onClick="@{(view)->vi.onClickDate(view)}"/>
        </LinearLayout>

        <View
            style="@style/MatchWrap_24"
            android:layout_height="1dp"
            android:layout_centerInParent="true"
            android:background="@color/light_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/spoqa_regular_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/notice"
                android:textSize="14sp"
                android:textColor="@color/black_all" />

            <TextView
                style="@style/spoqa_regular_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/notice_msg" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ToggleButton
                android:id="@+id/toggle_"
                android:layout_width="40dp"
                android:layout_height="24dp"
                android:layout_alignParentStart="true"
                android:layout_marginVertical="20dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/toggle_on_off"
                android:textOff=""
                android:textOn="" />
        </LinearLayout>

        <View
            style="@style/MatchWrap_24"
            android:layout_height="1dp"
            android:layout_centerInParent="true"
            android:background="@color/light_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/spoqa_regular_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/todo"
                android:textSize="14sp"
                android:textColor="@color/black_all" />
        </LinearLayout>

        <View
            style="@style/MatchWrap_24"
            android:layout_height="1dp"
            android:layout_centerInParent="true"
            android:background="@color/light_gray"/>
    </LinearLayout>
</layout>